--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
+:root {
+  --bg-main: #0a2636;
+  --primary: #d2d2d2;
+  --primary-faded: #959191;
+  --color-bright: #0af7c4;
+  --primary-hover: #ffffff;
+  --secondary-hover: #5eaca8;
+  --secondary:  #031e2e;
+}
+
+body {
+  background-color: var(--bg-main);
+  color: var(--color-bright);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
