Changed some styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
 :root {
-  --bg-main: #0a2636;
-  --primary: #d2d2d2;
-  --primary-faded: #959191;
-  --color-bright: #0af7c4;
-  --primary-hover: #ffffff;
-  --secondary-hover: #5eaca8;
-  --secondary:  #031e2e;
+  --bg-main: #0c1e3e;
+  --secondary:  #122c5a;
+  --highlight: #fc0ff5;
 }
 
 body {
   background-color: var(--bg-main);
-  color: var(--color-bright);
+  color: var(--highlight);
   text-align: center;
 }
